--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "front:watch": "npx mix watch",
     "front:hot": "npx mix watch --hot",
     "serve": "ts-node-dev --respawn --rs --transpile-only ./src/index.ts ",
-    "build": "npm run front:build && tsc -b --clean && tsc -b",
+    "build": "tsc -b --clean && tsc -b",
     "run": "ts-node ./src",
     "start": "node ./dist/index.js",
     "test": "jest"
