--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.24.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "dotenv": "^10.0.0",
     "fastify": "^3.25.0",
     "fastify-cors": "^6.0.2",
     "fastify-helmet": "^5.3.2",
