--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/es6-shim": "^0.31.42",
     "@types/generic-pool": "^3.1.10",
     "@types/jest": "^26.0.24",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/lodash": "^4.14.178",
     "@types/mongodb": "^3.6.20",
     "@types/node": "^14.14.45",
