--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "serve": "ts-node-dev --respawn --rs --transpile-only ./src/index.ts ",
     "build": "tsc -b --clean && tsc -b",
     "run": "ts-node ./src",
-    "start": "node ./dist/index.js",
+    "start": "node ./dist/index.js --host 0.0.0.0",
     "test": "jest"
   },
   "dependencies": {
-    "@envuso/core": "^2.0.3",
+    "@envuso/core": "^2.0.6",
     "@headlessui/vue": "^1.4.2",
     "@heroicons/vue": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
